Added responsive helper

--- a/_global-variables.scss
+++ b/_global-variables.scss
@@ -4,3 +4,12 @@ $space-sm:                          0.8rem;
 $space-md:                          1.6rem;
 $space-lg:                          3.2rem;
 $space-xl:                          6.4rem;
+
+// Container widths
+$screen-xxxl: 1600px;
+$screen-xxl: 1440px;
+$screen-xl: 1280px;
+$screen-lg: 980px;
+$screen-md: 768px;
+$screen-sm: 480px;
+$screen-xs: 320px;
