--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,12 +1,9 @@
+@import "global-variables";
+
 // --- Breakpoints ---
 
 @mixin bp($breakpoint) {
-  @if $breakpoint == max-xxxl {
-    @media screen and (max-width: $screen-xxxl) {
-      @content;
-    }
-  }
-  @else if $breakpoint == max-xxl {
+  @if $breakpoint == max-xxl {
     @media screen and (max-width: $screen-xxl) {
       @content;
     }
@@ -36,38 +33,53 @@
       @content;
     }
   }
-  @else if $breakpoint == min-xxxl {
-    @media screen and (min-width: $screen-xxxl) {
+  @else if $breakpoint == max-xxs {
+    @media screen and (max-width: $screen-xxs) {
+      @content;
+    }
+  }
+  @else if $breakpoint == max-xxxs {
+    @media screen and (max-width: $screen-xxxs) {
       @content;
     }
   }
   @else if $breakpoint == min-xxl {
-    @media screen and (min-width: $screen-xxl) {
+    @media screen and (min-width: $screen-xxl + 1) {
       @content;
     }
   }
   @else if $breakpoint == min-xl {
-    @media screen and (min-width: $screen-xl) {
+    @media screen and (min-width: $screen-xl + 1) {
       @content;
     }
   }
   @else if $breakpoint == min-lg {
-    @media screen and (min-width: $screen-lg) {
+    @media screen and (min-width: $screen-lg + 1) {
       @content;
     }
   }
   @else if $breakpoint == min-md {
-    @media screen and (min-width: $screen-md) {
+    @media screen and (min-width: $screen-md + 1) {
       @content;
     }
   }
   @else if $breakpoint == min-sm {
-    @media screen and (min-width: $screen-sm) {
+    @media screen and (min-width: $screen-sm + 1) {
       @content;
     }
   }
   @else if $breakpoint == min-xs {
-    @media screen and (min-width: $screen-xs) {
+    @media screen and (min-width: $screen-xs + 1) {
+      @content;
+    }
+  }
+  @else if $breakpoint == min-xxs {
+    @media screen and (min-width: $screen-xxs + 1) {
+      @content;
+    }
+  }
+  @else if $breakpoint == min-xxxs {
+    @media screen and (min-width: $screen-xxxs + 1) {
       @content;
     }
   }
@@ -76,9 +88,16 @@
 // --- Input placeholder ---
 
 @mixin placeholder {
-    &::-webkit-input-placeholder {@content}
-    &:-moz-placeholder           {@content}
-    &::-moz-placeholder          {@content}
-    &:-ms-input-placeholder      {@content}
+  &::-webkit-input-placeholder {
+    @content;
+  }
+  &:-moz-placeholder {
+    @content;
+  }
+  &::-moz-placeholder {
+    @content;
+  }
+  &:-ms-input-placeholder {
+    @content;
+  }
 }
-
