Container widths additions

--- a/_global-variables.scss
+++ b/_global-variables.scss
@@ -6,6 +6,8 @@ $space-lg:                          3.2rem;
 $space-xl:                          6.4rem;
 
 // Container widths
+$screen-xxxl:                       1600px;
+$screen-xxl:                        1440px;
 $screen-xl:                         1280px;
 $screen-lg:                         1024px;
 $screen-md:                         768px;
