--- a/_responsive-helper.sass
+++ b/_responsive-helper.sass
@@ -14,6 +14,16 @@ html
     z-index: 9999
     opacity: .25
 
+@media (max-width: $screen-xxxl)
+  html
+    &:after
+      content: 'xxxl'
+
+@media (max-width: $screen-xxl)
+  html
+    &:after
+      content: 'xxl'
+
 @media (max-width: $screen-xl)
   html
     &:after
