--- a/_mixins.scss
+++ b/_mixins.scss
@@ -3,12 +3,7 @@
 // --- Breakpoints ---
 
 @mixin bp($breakpoint) {
-  @if $breakpoint == max-xxxl {
-    @media screen and (max-width: $screen-xxxl - 1) {
-      @content;
-    }
-  }
-  @else if $breakpoint == max-xxl {
+  @if $breakpoint == max-xxl {
     @media screen and (max-width: $screen-xxl - 1) {
       @content;
     }
@@ -48,48 +43,43 @@
       @content;
     }
   }
-  @else if $breakpoint == min-xxxl {
-    @media screen and (min-width: $screen-xxxl + 1) {
-      @content;
-    }
-  }
   @else if $breakpoint == min-xxl {
-    @media screen and (min-width: $screen-xxl + 1) {
+    @media screen and (min-width: $screen-xxl - 1) {
       @content;
     }
   }
   @else if $breakpoint == min-xl {
-    @media screen and (min-width: $screen-xl + 1) {
+    @media screen and (min-width: $screen-xl - 1) {
       @content;
     }
   }
   @else if $breakpoint == min-lg {
-    @media screen and (min-width: $screen-lg + 1) {
+    @media screen and (min-width: $screen-lg - 1) {
       @content;
     }
   }
   @else if $breakpoint == min-md {
-    @media screen and (min-width: $screen-md + 1) {
+    @media screen and (min-width: $screen-md - 1) {
       @content;
     }
   }
   @else if $breakpoint == min-sm {
-    @media screen and (min-width: $screen-sm + 1) {
+    @media screen and (min-width: $screen-sm - 1) {
       @content;
     }
   }
   @else if $breakpoint == min-xs {
-    @media screen and (min-width: $screen-xs + 1) {
+    @media screen and (min-width: $screen-xs - 1) {
       @content;
     }
   }
   @else if $breakpoint == min-xxs {
-    @media screen and (min-width: $screen-xxs + 1) {
+    @media screen and (min-width: $screen-xxs - 1) {
       @content;
     }
   }
   @else if $breakpoint == min-xxxs {
-    @media screen and (min-width: $screen-xxxs + 1) {
+    @media screen and (min-width: $screen-xxxs - 1) {
       @content;
     }
   }
