--- a/_global-variables.scss
+++ b/_global-variables.scss
@@ -1,3 +1,6 @@
+// Colors
+$text-color:                        #333;
+
 // Spaces
 $space-xs:                          0.4rem;
 $space-sm:                          0.8rem;
