--- a/_helpers.scss
+++ b/_helpers.scss
@@ -6,6 +6,28 @@
   color: $text-color !important;
 }
 
+// --- Font Size ---
+
+.fs-xs {
+  font-size: $font-size-base * .8 !important;
+}
+
+.fs-sm {
+  font-size: $font-size-base * .9 !important;
+}
+
+.fs-md {
+  font-size: $font-size-base !important;
+}
+
+.fs-lg {
+  font-size: $font-size-base * 1.1 !important;
+}
+
+.fs-xl {
+  font-size: $font-size-base * 1.2 !important;
+}
+
 // --- Width / 12 grid ---
 
 .w-1 {
@@ -93,43 +115,43 @@
 // --- Opacity ---
 
 .o1 {
-  opacity: 0.1;
+  opacity: 0.1 !important;
 }
 
 .o2 {
-  opacity: 0.2;
+  opacity: 0.2 !important;
 }
 
 .o3 {
-  opacity: 0.3;
+  opacity: 0.3 !important;
 }
 
 .o4 {
-  opacity: 0.4;
+  opacity: 0.4 !important;
 }
 
 .o5 {
-  opacity: 0.5;
+  opacity: 0.5 !important;
 }
 
 .o6 {
-  opacity: 0.6;
+  opacity: 0.6 !important;
 }
 
 .o7 {
-  opacity: 0.7;
+  opacity: 0.7 !important;
 }
 
 .o8 {
-  opacity: 0.8;
+  opacity: 0.8 !important;
 }
 
 .o9 {
-  opacity: 0.9;
+  opacity: 0.9 !important;
 }
 
 .o10 {
-  opacity: 1;
+  opacity: 1 !important;
 }
 
 // --- Margins ---
